--- a/index.html
+++ b/index.html
@@ -2,15 +2,8 @@
 <html lang="en">
   <head>
     <title>Kyselysovellus</title>
-    <script src='app.js' defer></script>
-    <link rel='stylesheet' href='styles.css'>
   </head>
   <body>
-    <div id='kysymys'>Klikkaa nappia aloittaaksesi.</div>
-    <div id='vastaukset'>
-    </div>
-    <div id="nappi">
-      <button id="seuraava">Seuraava kysymys</button>
-    </div>
+    <a href="/sovellus/index.html">Sovellus</a>
   </body>
 </html>
