--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Kyselysovellus</title>
   </head>
   <body>
-    <a href="/sovellus/index.html">Sovellus</a>
+    <a href="/kysely/sovellus/index.html">Sovellus</a>
   </body>
 </html>
